src/test/deca/syntax/invalid/className-return.synt
className-return.deca:1:
